# cu_panda

cu_panda_bringup/: CMakeLists.txt  package.xml
cu_panda_bringup/config/: default.rviz  default_controllers.yaml  franka_control_node.yaml  robot.rviz
cu_panda_bringup/launch/: hardware.launch  rviz.launch  simulation_jsp.launch
cu_panda_bringup/scriptpanel/: desk  grasp  launch-robot  move-present-gripper  open-gripper  reset-franka-error  scriptpanel.yaml  shutdown-arm  unlock-arm
cu_panda_description/: CMakeLists.txt  package.xml
cu_panda_description/config/: joint_limits.yaml
cu_panda_description/launch/: upload_description.launch
cu_panda_description/meshes/: README.md  finger_no_tip.dae  panda_long_finger.stl  panda_short_finger.stl  panda_short_finger_adapted.scad  panda_short_finger_adapted.stl
cu_panda_description/robots/: basic_setup.urdf.xacro
cu_panda_description/urdf/: franka_hand_no_tips.urdf.xacro  franka_robot_no_tips.urdf.xacro
cu_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cu_panda_moveit_config/config/: cu_panda.srdf  fake_controllers.yaml  gazebo_cu_panda.urdf  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
cu_panda_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
