<?xml version="1.0"?>
<package format="2">
  <name>cu_panda_bringup</name>
  <version>0.0.0</version>
  <description>Launch configurations for the CU Panda</description>

  <maintainer email="migoerner@constructor.university">Michael Goerner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cu_panda_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
